[tool.poetry]
name = "vampire-survivors-profiler"
version = "0.1.0"
description = "Vampire Survivors Profiler: A simple launcher utility for Vampire Survivors game, allowing players to manage profiles, including creation, deletion, and renaming. Enhance your gaming experience with easy profile switching."
authors = ["derDere"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tk = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pyinstaller = ">=6.5.0,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyinstaller = "pyinstaller:build"

[tool.poetry.dev-dependencies]
pyinstaller = ">=6.5.0,<7.0.0"
